<resources>
    <string name="app_name">audioplayer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="filename">File Name</string>
    <string name="playbutton">Play</string>
    <string name="pausebutton">Pause</string>
    <string name="reset">RePlay</string>
    <string name="stop">Stop</string>
    <string name="filenoexist">File not in exist!</string>
    <string name="continues">Continue</string>
</resources>
